# ChatMe

./: LICENSE  README.md
backend/: .env  .gitignore  pyproject.toml
backend/src/: app.py
backend/src/auth/: db.py  utils.py
backend/src/chat/: dal.py  main.py  server.py  tempCodeRunnerFile.py
backend/src/core/: db.py
backend/src/web_search/: groq_models.txt  output.json  playground.py  search.py  search_format.txt
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: chatApi.js  chatDocs.js  client.js
frontend/src/components/: Footer.jsx  Header.jsx  Input.jsx  Layout.jsx  NewChatRedirect.jsx  SelectedTools.jsx  SideBar.jsx  Tools.jsx
frontend/src/hooks/: ChatHistory.jsx  GlobalChatHistory.jsx  GlobalTools.jsx
frontend/src/pages/: ChatBot.jsx  Other.jsx  Starter.jsx
