[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "motor>=3.7.1",
    "openai>=1.97.0",
    "pydantic>=2.11.7",
    "pymongo==4.12.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
